Update Example.env with improved Jira, Slack, and LLM configuration options

--- a/Example.env
+++ b/Example.env
@@ -1,10 +1,32 @@
-export OPENAI_API_KEY="sk-"
-export OPENAI_MODEL="gpt-5.1"
-export SLACK_SIGNING_SECRET=""
-export SLACK_BOT_TOKEN="xoxb"
-export SLACK_USER_TOKEN = xoxp
-export JIRA_BASE_URL=https://
-export JIRA_EMAIL="@musa.co"
-export JIRA_API_TOKEN="ATATT"
-export JIRA_CREATE_ENABLED = true
 export PORT=8080
+
+# Slack
+export SLACK_SIGNING_SECRET=""
+export SLACK_BOT_TOKEN="xoxb-..."
+export SLACK_USER_TOKEN="xoxp-..."
+export SLACK_SEARCH_MAX_PAGES=10
+
+# LLM (OpenAI-compatible)
+export OPENAI_API_KEY="sk-..."
+export OPENAI_MODEL="gpt-4o-mini"
+export OPENAI_FALLBACK_MODEL=""
+
+# Jira
+export JIRA_BASE_URL="https://yourcompany.atlassian.net"
+export JIRA_EMAIL="bot@yourcompany.com"
+export JIRA_API_TOKEN="ATATT..."
+
+# Comma-separated list of Jira project keys to include in default searches.
+# Leave empty to search across all projects the bot has access to.
+export JIRA_PROJECT_KEYS="PROJ,BACKEND,OPS"
+
+# Maps human-readable project names (lowercase) to Jira keys.
+# Format: name1:KEY1,name2:KEY2,...
+# Used for natural-language commands like "crie um card no backend".
+export JIRA_PROJECT_NAME_MAP="backend:BACKEND,ops:OPS,frontend:FE"
+
+# Enable Jira issue creation via the bot (default: false).
+export JIRA_CREATE_ENABLED=false
+
+# Display name of the bot (used in prompts and messages).
+export BOT_NAME="Jarvis"
