Add GitHub integration configuration options to Example.env (token, org, repos)

--- a/Example.env
+++ b/Example.env
@@ -30,3 +30,12 @@ export JIRA_CREATE_ENABLED=false
 
 # Display name of the bot (used in prompts and messages).
 export BOT_NAME="Jarvis"
+
+# GitHub integration (optional) — enriches Bug cards with code context.
+# Requires a Personal Access Token (classic or fine-grained) with at least
+# read access to the repositories you want to search.
+export GITHUB_TOKEN="github_pat_11..."
+# Scope searches to a GitHub organization (recommended).
+export GITHUB_ORG="my-organization"
+# Optionally restrict to specific repos (takes precedence over GITHUB_ORG).
+export GITHUB_REPOS=""   # e.g. "org/repo1,org/repo2"
