feat(metabase): integrate Metabase for schema generation and query assistance
- add Metabase client with API key authentication
- fetch database schemas and generate Markdown documentation
- include accessible schemas and cards for SQL query assistance
- extend LLM context with database query results
- update main function to initialize Metabase integration at startup

Why:
Adds support for Metabase as a data source, enabling Jarvis to leverage database schemas and generate SQL queries when answering analytical questions.

--- a/Example.env
+++ b/Example.env
@@ -30,3 +30,22 @@ export JIRA_CREATE_ENABLED=false
 
 # Display name of the bot (used in prompts and messages).
 export BOT_NAME="Jarvis"
+
+# Metabase integration — on startup the bot documents all databases/tables/fields
+# and uses that schema to write SQL queries when answering analytical questions.
+export METABASE_BASE_URL="https://metabase.yourcompany.com"
+
+# API key created in Metabase: Admin → Settings → Authentication → API Keys
+# (requires Metabase ≥ 0.47).
+export METABASE_API_KEY="mb_..."
+
+# Output path for the generated schema Markdown file.
+# Default: ./docs/metabase_schema.md
+export METABASE_SCHEMA_PATH="./docs/metabase_schema.md"
+
+# Environment label written to the schema file header (e.g. production, staging).
+export METABASE_ENV="production"
+
+# Timeout for SQL queries via /api/dataset. Increase for slow databases like
+# Redshift. Accepts Go duration strings: 5m, 3m30s, 120s. Default: 5m.
+export METABASE_QUERY_TIMEOUT="5m"
